feat:add images

--- a/coast.html
+++ b/coast.html
@@ -20,5 +20,10 @@
         </li>
       </ul>
     </nav>
+    <section>
+      <figure>
+        <img src="assets/images/coast.jpg" alt="an image of dublin coast" />
+      </figure>
+    </section>
   </body>
 </html>
